feat: add environment configuration

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <script>
-        // жёстко указываем бек на 127.0.0.1:8100
-        window.__API__ = 'http://127.0.0.1:8100';
+        // жёстко указываем WS на 127.0.0.1:8100
         window.__WS__  = 'ws://127.0.0.1:8100/ws';
     </script>
 </head>
