chore: add API token to config and frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,7 @@
     <script>
         // жёстко указываем WS на 127.0.0.1:8100
         window.__WS__  = 'ws://127.0.0.1:8100/ws';
+        window.__TOKEN__ = 'b1a7528e92de0ce1e456b7afad435b47ce870dcb41688de2af9e815a5a65372c';
     </script>
 </head>
 <body>
